[gd_scene load_steps=10 format=3 uid="uid://064dt5anmjmv"]

[ext_resource type="Script" path="res://Nodes/objetos/world_02/piston_plataform_small.gd" id="1_wa4q6"]
[ext_resource type="Texture2D" uid="uid://cbemov6wvc6xx" path="res://Sprites/Objetos/world_02/plataform_piston_small.png" id="2_t1vra"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p5jkb"]
size = Vector2(240, 81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ejog3"]
size = Vector2(242, 82)

[sub_resource type="Animation" id="Animation_rf51a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D2/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -50)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area2D2/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -54)]
}

[sub_resource type="Animation" id="Animation_euku2"]
resource_name = "down_up"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.571429),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D2/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.571429),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -29), Vector2(0, -58)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, -50)]
}

[sub_resource type="Animation" id="Animation_uxygh"]
resource_name = "up_down"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D2/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D2/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-0.1, 14), Vector2(0.1, -1), Vector2(0, -22), Vector2(0, -54)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(0, -50)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ebkqp"]
_data = {
"RESET": SubResource("Animation_rf51a"),
"down_up": SubResource("Animation_euku2"),
"up_down": SubResource("Animation_uxygh")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wlmlp"]
size = Vector2(24.2, 18.575)

[node name="Piston_plataform_small" type="AnimatableBody2D"]
script = ExtResource("1_wa4q6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -18)
scale = Vector2(10, 10)
texture = ExtResource("2_t1vra")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -50)
shape = SubResource("RectangleShape2D_p5jkb")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 65536

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3.05176e-05, 2.38419e-06)
shape = SubResource("RectangleShape2D_ejog3")
debug_color = Color(0.61356, 0.536356, 0.0854089, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ebkqp")
}

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(0, -29)
scale = Vector2(10, 1)
collision_layer = 0
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(0, -54)
shape = SubResource("RectangleShape2D_wlmlp")
disabled = true
debug_color = Color(0.935848, 0.551267, 0.130429, 0.47451)

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
